[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "nethsm"
authors = [{ name = "Nitrokey", email = "pypi@nitrokey.com" },]
readme = "README.md"
requires-python = ">=3.9"
license = {file = "LICENSE"}
classifiers = ["License :: OSI Approved :: Apache Software License"]
dynamic = ["version", "description"]
dependencies = [
  "urllib3 >=2.0,<2.1",
  "typing_extensions ~= 4.3.0",
  "python-dateutil",
]

[project.urls]
Source = "https://github.com/Nitrokey/nethsm-sdk-py"


[project.optional-dependencies]
dev = [
  "black >=22.1.0,<23",
  "flake8",
  "flit >=3.2,<4",
  "ipython",
  "isort",
  "mypy >=1.4,<1.5",
  "pyinstaller ==5.9.0",
  "pyinstaller-versionfile ==2.1.1; sys_platform=='win32'",
  "pytest",
  "pytest-reporter-html1",
  "docker",
  "pycryptodome",
  "requests",
  "types-python-dateutil",
  "types-requests",
  "pytest-cov",
  "cryptography",
  "pyyaml",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
# ignore InsecureRequestWarning from urllib3
filterwarnings = ["ignore::urllib3.exceptions.InsecureRequestWarning"]

[tool.black]
target-version = ["py39"]
extend-exclude = 'nethsm/client'

[tool.isort]
py_version = "39"
profile = "black"
extend_skip = ["nethsm/client"]

[tool.mypy]
show_error_codes = true
python_version = "3.9"
warn_unused_configs = true
warn_redundant_casts = true

# enable strict checks for the manually written code, see
# - https://github.com/python/mypy/issues/11401
# - https://mypy.readthedocs.io/en/stable/existing_code.html#introduce-stricter-options
[[tool.mypy.overrides]]
module = "nethsm"
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_subclassing_any = true
disallow_untyped_calls = true
disallow_untyped_decorators = true
disallow_untyped_defs = true
no_implicit_reexport = true
strict_concatenate = true
strict_equality = true
warn_unused_ignores = true
warn_return_any = true
