[build-system]
requires = ["poetry-core >=2, <3"]
build-backend = "poetry.core.masonry.api"

[project]
name = "nethsm"
version = "2.0.1"
description = "Python Library to manage NetHSM(s)"
authors = [{ name = "Nitrokey", email = "pypi@nitrokey.com" },]
readme = "README.md"
requires-python = ">=3.9"
license = "Apache-2.0"
dynamic = ["classifiers"]
dependencies = [
  "certifi",
  "cryptography >=41",
  "python-dateutil >=2, <3",
  "typing_extensions >=4.3, <5",
  "urllib3 >=2, <3",
]

[project.urls]
repository = "https://github.com/Nitrokey/nethsm-sdk-py"

[tool.poetry]
classifiers = [
  "Intended Audience :: Developers",
]

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
black = ">=22.1.0,<23"
flake8 = "*"
ipython = "*"
isort = "*"
mypy = ">=1.4,<1.5"
pytest = "<9"
pytest-reporter-html1 = "*"
docker = "*"
podman = ">=5,<6"
pycryptodome = "*"
# for compatibility with docker, see https://github.com/docker/docker-py/issues/3256
requests = "<2.32.0"
types-python-dateutil = "*"
types-requests = "*"
pytest-cov = "*"
pyyaml = "*"

[tool.pytest.ini_options]
testpaths = ["tests"]
# ignore InsecureRequestWarning from urllib3
filterwarnings = ["ignore::urllib3.exceptions.InsecureRequestWarning"]

[tool.black]
target-version = ["py39"]
extend-exclude = 'nethsm/client'

[tool.isort]
py_version = "39"
profile = "black"
extend_skip = ["nethsm/client"]

[tool.mypy]
show_error_codes = true
strict = true
python_version = "3.9"

# disable strict checks for the auto-generated code, see
# - https://github.com/python/mypy/issues/11401
# - https://mypy.readthedocs.io/en/stable/existing_code.html#introduce-stricter-options
[[tool.mypy.overrides]]
module = "nethsm.client.*"
check_untyped_defs = false
disallow_any_generics = false
disallow_incomplete_defs = false
disallow_subclassing_any = false
disallow_untyped_calls = false
disallow_untyped_decorators = false
disallow_untyped_defs = false
no_implicit_reexport = false
strict_concatenate = false
strict_equality = false
warn_unused_ignores = false
warn_return_any = false
